# GreenCreditAI

./: .env.example  .gitignore  GEMINI.md  README.md  main.py  pyproject.toml
app/: main.py
app/agents/: analysis.py  auditor.py  chat.py  nodes.py  policy.py  router.py  summarizer.py
app/api/: deps.py
app/api/v1/: __init__.py  auth.py  chat.py  config.py  documents.py  optimization.py
app/core/: cache.py  config.py  db.py  logging.py  prompts.py  security.py  utils.py
app/graph/: definitions.py  nodes.py  state.py
app/models/: __init__.py  config.py  file.py  session.py  user.py
app/parsers/: __init__.py  base.py  image.py  office.py  pdf.py  text.py
app/rag/: vector_store.py
app/rag/strategies/: base.py  general.py
app/schemas/: chat.py  optimization.py  state.py
app/services/: callback_handler.py  config_service.py  document_service.py  graph_engine.py  llm_factory.py  optimization_service.py  session_service.py  workflow_engine.py  workflow_service.py
app/services/agents/: analysis.py  policy.py  router.py  summarizer.py
app/templates/: index.html  login.html
app/tools/: decision_tool.py  dynamic_tool.py  rag_tool.py  search_tool.py  tyc_tool.py
knowledge_base/: 绿色金融支持项目目录（2025年版）.json
scripts/: fix_db_columns.py  ingest_docs.py  init_db_tables.py  migrate_db.py  migrate_session_user_id.py  migrate_user_id.py
static/css/: style.css
static/js/: app.js
tests/: conftest.py  test_agent_factory.py  test_agents.py  test_api.py  test_config_persistence.py  test_document_service.py  test_kb_flow.py  test_mcp_flow.py  test_optimization.py  test_parsers.py  test_tools.py  test_workflow.py  test_workflow_custom_tools.py
