[project]
name = "greencreditai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "certifi>=2026.1.4",
    "dashscope>=1.25.8",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.0.6",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "loguru>=0.7.3",
    "networkx>=3.6.1",
    "openpyxl>=3.1.5",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.6.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "qdrant-client>=1.16.2",
    "sqlmodel>=0.0.31",
    "unstructured>=0.18.27",
    "urllib3<2.0.0",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
